--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,8 @@ repositories {
 
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter')
-	compile("org.springframework.boot:spring-boot-starter-data-rest")
+	compile('org.springframework.boot:spring-boot-starter-data-rest')
+    compile('org.springframework.data:spring-data-mongodb')
 	compile('org.codehaus.groovy:groovy')
 	compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.3'
 
